# mcp-server-coreshub

./: README.md  pyproject.toml
src/coreshub_mcp_server/: base_plugin.py
src/coreshub_mcp_server/plugins/: Inference_service.py  distributed_training.py  epfs_filesystem.py  example.py
